CHANGES IN FLTK 1.1.0b2

	- Fixed image/text label handling; in b1 the label
	  needed a non-blank text string to display the image. 
	  This bug also caused all sorts of crashes and display
	  problems.

	- Added new filetype() method to Fl_FileBrowser to allow
	  for file or directory browsing.

	- Fixed the drawing of the focus box around
	  Fl_Return_Button.

	- Fixed menu item measurement bug (wasn't initializing
	  image pointers to 0...)

	- Radio and checkbox menu items now draw with the new
	  style (round radio buttons with dots and square check
	  buttons with check marks.)

	- Improved the appearance of Fl_Check_Button.

	- Improved the Fl_HelpView table formatting code; now
	  dynamically sizes the table columns, and supports
	  COLSPAN.

	- The FLUID keyboard shortcuts now work as expected
	  (CTRL-C copies, SHIFT-CTRL-C writes code, etc.)

	- The FLTK_DOCDIR environment variable can now be
	  used to tell FLUID where to find the on-line
	  documentation files.

	- FLUID now supports image labels in addition to text
	  labels + text over image alignment.

	- FLUID now supports tooltips.

	- The widget panel in FLUID is now tabbed, a la FLTK
	  2.0.

	- The FLUID pixmap destructor tried to free 1 too many
	  lines of image data.

	- FLUID now provides on-line help.

	- Changed Fl_FileXYZ to Fl_File_XYZ.

	- Changed Fl_HelpXYZ to Fl_Help_XYZ.


CHANGES IN FLTK 1.1.0b1

	- Added new image() and deimage() methods to support
	  image + text labels more easily.

	- Added new alignment bit FL_ALIGN_TEXT_OVER_IMAGE.

	- Added tooltip support using Jacques Tremblay's tooltip
	  patch.

	- Added keyboard navigation to all widgets.

	- Added support for mouse wheels using the new
	  FL_MOUSEWHEEL event type.  Get the mouse wheel
	  movement values from Fl::e_dx (horizontal) and
	  Fl::e_dy (vertical).

	- Added the Fl_Check_Browser, Fl_FileBrowser,
	  Fl_FileChooser, Fl_FileIcon, Fl_HelpDialog,
	  Fl_HelpView, Fl_Progress, and Fl_Wizard widgets from