@@ -1,7 +1,7 @@
 dnl -*- sh -*-
 dnl the "configure" script is made from this by running GNU "autoconf"
 dnl
-dnl "$Id: configure.in,v 1.33.2.31.2.7 2001/08/11 16:09:26 easysw Exp $"
+dnl "$Id: configure.in,v 1.33.2.31.2.8 2001/09/29 15:57:32 easysw Exp $"
 dnl
 dnl Configuration script for the Fast Light Tool Kit (FLTK).
 dnl
@@ -30,11 +30,11 @@ AC_INIT(src/Fl.cxx)
 AC_PROG_RANLIB
 
 LINKFLTK="-lfltk"
-LINKFLTKGL="-lfltkgl"
+LINKFLTKGL="-lfltk_gl"
 GLDEMOS="gldemos"
 
 LIBNAME="../lib/libfltk.a"
-GLLIBNAME="../lib/libfltkgl.a"
+GLLIBNAME="../lib/libfltk_gl.a"
 if test "$RANLIB" != ":"; then
   LIBCOMMAND="ar cr"
 else
@@ -64,39 +64,53 @@ AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
 fi])
 AC_ARG_ENABLE(gl, [  --enable-gl             turn on OpenGL support [default=yes]])
 AC_ARG_ENABLE(shared, [  --enable-shared         turn on shared libraries [default=no]],[
+DSOLINK=""
+AC_SUBST(DSOLINK)
 if eval "test x$enable_shared = xyes"; then
     PICFLAG=1
     case $uname in
 	SunOS* | UNIX_S*)
             DSONAME="libfltk.so.1.1"
-            GLDSONAME="libfltkgl.so.1.1"
+            GLDSONAME="libfltk_gl.so.1.1"
 	    DSOCOMMAND="\$(CXX) -h \$@ \$(LDLIBS) -G $DEBUGFLAG -o"
+	    if test "$libdir" != "/usr/lib"; then
+		    DSOLINK="-R$libdir"
+            fi
 	    ;;
 	HP-UX*)
             DSONAME="libfltk.sl.1.1"
-            GLDSONAME="libfltkgl.sl.1.1"
+            GLDSONAME="libfltk_gl.sl.1.1"
 	    DSOCOMMAND="ld -b -z +h \$@ $DEBUGFLAG -o"
+	    if test "$libdir" != "/usr/lib"; then
+		    DSOLINK="-Wl,-rpath,$libdir"
+            fi
 	    ;;
 	IRIX* | OSF1*)
             DSONAME="libfltk.so.1.1"
-            GLDSONAME="libfltkgl.so.1.1"
+            GLDSONAME="libfltk_gl.so.1.1"
             DSOCOMMAND="\$(CXX) -Wl,-soname,\$@ \$(LDLIBS) -shared $DEBUGFLAG -o"
+	    if test "$libdir" != "/usr/lib" - a "$libdir" != "/usr/lib32"; then
+		    DSOLINK="-Wl,-rpath,$libdir"
+            fi
 	    ;;
-	FreeBSD* | NetBSD* | OpenBSD*)
+	FreeBSD* | NetBSD* | OpenBSD* | Linux*)
             DSONAME="libfltk.so.1.1"
-            GLDSONAME="libfltkgl.so.1.1"
+            GLDSONAME="libfltk_gl.so.1.1"
             DSOCOMMAND="\$(CXX) -Wl,-soname,\$@ \$(LDLIBS) -shared -fPIC $DEBUGFLAG -o"
+	    if test "$libdir" != "/usr/lib"; then
+		    DSOLINK="-Wl,-rpath,$libdir"
+            fi
 	    ;;
 	AIX*)
             DSONAME="libfltk_s.a"
-            GLDSONAME="libfltkgl_s.a"
+            GLDSONAME="libfltk_gl_s.a"
             DSOCOMMAND="\$(CXX) -Wl,-bexpall,-bM:SRE,-bnoentry -o"
             ;;
 	*)
             echo "Warning: shared libraries may not be supported.  Trying -shared"
 	    echo "         option with compiler."
             DSONAME="libfltk.so.1.1"
-            GLDSONAME="libfltkgl.so.1.1"
+            GLDSONAME="libfltk_gl.so.1.1"
             DSOCOMMAND="\$(CXX) -Wl,-soname,\$@ \$(LDLIBS) -shared $DEBUGFLAG -o"
 	    ;;
     esac
@@ -442,8 +456,10 @@ else
 fi
 
 AC_CONFIG_HEADER(config.h:configh.in)
-AC_OUTPUT(makeinclude)
+AC_OUTPUT(makeinclude fltk-config)
+
+chmod +x fltk-config
 
 dnl
-dnl End of "$Id: configure.in,v 1.33.2.31.2.7 2001/08/11 16:09:26 easysw Exp $".
+dnl End of "$Id: configure.in,v 1.33.2.31.2.8 2001/09/29 15:57:32 easysw Exp $".
 dnl
